--- a/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
+++ b/KuranX.App/Core/Pages/NoteF/NoteFrame.xaml
@@ -748,7 +748,7 @@
                 <Border Grid.Column="1" Grid.Row="0"  UseLayoutRounding="True" SnapsToDevicePixels="True">
                     <Border Width="320" Height="60" Style="{DynamicResource defaultBorderShadowEffect}">
                         <StackPanel Orientation="Horizontal">
-                            <Border  Width="15" CornerRadius="5 0 0 5" Background="#B30B00" />
+                            <Border  Width="15" CornerRadius="5 0 0 5" Background="#6610F2" />
                             <Border Width="230" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
                                 <StackPanel Orientation="Horizontal">
                                     <StackPanel Orientation="Vertical" Margin="5 0 10 0">
@@ -757,7 +757,7 @@
                                 </StackPanel>
                             </Border>
                             <Border Width="36" Height="36" Margin="0 0 7 0">
-                                <Button x:Name="libStat"  Style="{DynamicResource nt_viewStackBtn}" Content="0" Tag="#E33FA1" Uid="#FFF" />
+                                <Button x:Name="libStat"  Style="{DynamicResource nt_viewStackBtn}" Content="0" Tag="#6610F2" Uid="#FFF" />
                             </Border>
                             <Border Width="24" Height="24" Margin="0 0 10 0">
                                 <Button Content="Kütüphane" Style="{DynamicResource nt_ItemOpenIcon}"  Tag="ArrowRight" Click="filter_Click" />
@@ -829,7 +829,7 @@
                 </StackPanel>
 
                 <StackPanel Style="{DynamicResource frameItemsOffsetNav}">
-                    <Button x:Name="filterlibrary" IsEnabled="False" Tag="#B30B00" Content="Kütüphane" Style="{DynamicResource nt_pageColorControl}" Click="filter_Click" />
+                    <Button x:Name="filterlibrary" IsEnabled="False" Tag="#6610F2" Content="Kütüphane" Style="{DynamicResource nt_pageColorControl}" Click="filter_Click" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
