--- a/KuranX.App/Core/Pages/VerseF/verseFrame.xaml
+++ b/KuranX.App/Core/Pages/VerseF/verseFrame.xaml
@@ -14,7 +14,7 @@
       Title="VerseFrame" Background="#FAFAFA" Loaded="Page_Loaded">
     <Grid>
 
-        <Popup x:Name="pp_moveBar" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
+        <Popup  StaysOpen="False" x:Name="pp_moveBar" IsOpen="False" Placement="RelativePoint" AllowsTransparency="True" Width="470" Height="115" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade" HorizontalOffset="322" VerticalOffset="-20">
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="450" Height="95">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -77,7 +77,7 @@
 
             <!-- POPUPLAR  -->
 
-            <Popup x:Name="popup_VerseGoto" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="260" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_VerseGoto" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="260" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="240">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -114,7 +114,7 @@
 
             <!-- Note  -->
 
-            <Popup x:Name="popup_Note" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_Note" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="330">
                     <Grid>
@@ -168,7 +168,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_noteAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="580">
                     <Grid>
@@ -223,7 +223,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_notesAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_notesAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
                     <Grid>
@@ -270,7 +270,7 @@
 
             <!-- Subject -->
 
-            <Popup x:Name="popup_addSubjectPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="340" Height="370" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_addSubjectPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="340" Height="370" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="320" Height="350">
                     <Grid>
@@ -325,7 +325,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_FolderSubjectPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="370" Height="460" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_FolderSubjectPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="370" Height="460" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="350" Height="440">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -393,7 +393,7 @@
 
             <!-- Meaning -->
 
-            <Popup x:Name="popup_Meaning" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_Meaning" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="330">
                     <Grid>
@@ -444,7 +444,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_meainingAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_meainingAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
                     <Grid>
@@ -487,7 +487,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_meaningAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="690" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup  StaysOpen="False" x:Name="popup_meaningAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="690" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="670">
                     <Grid>
@@ -662,7 +662,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_meainingConnectDetailText" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="770" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False" x:Name="popup_meainingConnectDetailText" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="770" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="750" Height="330">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -710,7 +710,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_meaningEditPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="570" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_meaningEditPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="570" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="550" Height="330">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -752,7 +752,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_meaningDeleteConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_meaningDeleteConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="200">
                     <Grid>
@@ -790,7 +790,7 @@
 
             <!-- Remider  -->
 
-            <Popup x:Name="popup_remiderControlPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_remiderControlPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="200">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -837,7 +837,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_remiderAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="650" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_remiderAddPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="400" Height="650" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="380" Height="630">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -930,7 +930,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_remiderDeleteConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_remiderDeleteConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="200">
                     <Grid>
@@ -968,7 +968,7 @@
 
             <!-- Desc -->
 
-            <Popup x:Name="popup_descVersePopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_descVersePopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="780" Height="500">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -1010,7 +1010,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_commentaryVersePopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_commentaryVersePopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="520" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="780" Height="500">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -1057,7 +1057,7 @@
 
             <!-- feedback -->
 
-            <Popup x:Name="popup_feedbackOpenPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="440" Height="540" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_feedbackOpenPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="440" Height="540" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="420" Height="520">
                     <Grid>
@@ -1109,7 +1109,7 @@
 
             <!-- Reset -->
 
-            <Popup x:Name="popup_resetVerseConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_resetVerseConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="200">
                     <Grid>
@@ -1143,7 +1143,7 @@
                 </Border>
             </Popup>
 
-            <Popup x:Name="popup_fastExitConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_fastExitConfirm" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="380" Height="220" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="360" Height="200">
                     <Grid>
@@ -1181,7 +1181,7 @@
 
             <!-- Search -->
 
-            <Popup x:Name="popup_search" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="670" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_search" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="800" Height="670" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="780" Height="650">
                     <Grid>
@@ -1274,7 +1274,7 @@
 
             <!-- Words -->
 
-            <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="920" Height="580">
                     <Grid>
@@ -1337,7 +1337,7 @@
 
             <!-- NextSure -->
 
-            <Popup x:Name="popup_nextSure" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="360" Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup StaysOpen="False"  x:Name="popup_nextSure" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="360" Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
                 <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="340" Height="300">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -1680,7 +1680,7 @@
 
             <!-- Verse Nav  -->
 
-            <StackPanel Grid.Row="3"  Orientation="Horizontal" HorizontalAlignment="Center" UseLayoutRounding="True" SnapsToDevicePixels="True">
+            <StackPanel Grid.Row="3" Style="{DynamicResource aniEffectFadeStack}" x:Name="navControlStack" Orientation="Horizontal" HorizontalAlignment="Center" UseLayoutRounding="True" SnapsToDevicePixels="True">
 
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -1708,7 +1708,7 @@
 
             <!-- Bottom Nav  -->
 
-            <Grid Grid.Row="4" Style="{DynamicResource aniEffectFadeGrid}">
+            <Grid Grid.Row="4" x:Name="actionsControlGrid" Style="{DynamicResource aniEffectFadeGrid}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
