--- a/KuranX.App/Core/Pages/VerseF/verseStickFrame.xaml
+++ b/KuranX.App/Core/Pages/VerseF/verseStickFrame.xaml
@@ -13,7 +13,7 @@
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115" Background="#FAFAFA"
       Title="verseStickFrame">
 
-    <Grid Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden" x:Name="stickHomeGrid">
+    <Grid Style="{DynamicResource aniEffectFadeGrid}" Visibility="Visible" x:Name="stickHomeGrid">
 
         <Grid>
 
@@ -307,7 +307,7 @@
                         <ColumnDefinition Width="60" />
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" x:Name="NavUpdatePrevSingle" Style="{DynamicResource vrs_NavButton}" Tag="AngleLeft" Height="30" Click="NavUpdatePrevSingle_Click" />
+                    <Button Grid.Column="0" x:Name="NavUpdatePrevSingle" Style="{DynamicResource vrs_NavButton}" Tag="AngleLeft" Height="30" Click="NavUpdatePrevSingle_Click" IsEnabled="false" />
                     <StackPanel x:Name="navstackPanel" Style="{DynamicResource aniEffectFadeStack}" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
                         <CheckBox x:Name="vb1" extension:Extensions.DataStorage="0" IsEnabled="false" Style="{DynamicResource vrs_NavButtonV}"  Click="activeVerseSelected_Click" />
                         <CheckBox x:Name="vb2" extension:Extensions.DataStorage="0" Style="{DynamicResource vrs_NavButtonV}" Click="activeVerseSelected_Click" />
